Feat: add break word for long words

--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -17,6 +17,7 @@
     line-height: normal;
     text-wrap: wrap;
     white-space: normal;
+    word-break: break-word;
     text-align: center;
   }
   &__navlist {
