--- a/component-library/components/sections/contact-block/contact-block.scss
+++ b/component-library/components/sections/contact-block/contact-block.scss
@@ -52,7 +52,9 @@
   
   
     &__map-wrapper {
-      height: 100%;
+      height: 700px;
+      aspect-ratio: 1 / 1;
+      width:700px;
       object-fit: cover;
       grid-column: 1 / -1;
 
@@ -69,7 +71,7 @@
       }
   
       &__map-wrapper {
-        grid-column: 8 / -2;
+        grid-column: 8 / -1;
       }
   
       &--right {
