Refactor: Reworking yml file for component as there are some errors in the live site

--- a/component-library/components/sections/contact-block/contact-block.eleventy.liquid
+++ b/component-library/components/sections/contact-block/contact-block.eleventy.liquid
@@ -10,7 +10,7 @@
   <div class="{{ c }}__content">
     <div class="{{ c }}__content-wrapper">
       {% if content.social_icons %}
-        {% bookshop "generic/social-icons" bind:social_icons %}
+        {% bookshop "generic/social-icons" bind:social_media_links %}
       {% endif %}
 
       {% if content.heading %}
