--- a/component-library/components/sections/contact-block/contact-block.eleventy.liquid
+++ b/component-library/components/sections/contact-block/contact-block.eleventy.liquid
@@ -10,7 +10,15 @@
   <div class="{{ c }}__content">
     <div class="{{ c }}__content-wrapper">
       {% if content.social_icons %}
-        {% bookshop "generic/social-icons" bind:social_media_links %}
+        <div class="{{ c }}__social-icons">
+            {% capture social_icon_styles %}
+                icon_background_hover_color: "var(--brand-grey-200, #E9E9EC)"
+                icon_color: "var(--brand-grey-200, #E9E9EC)"
+                icon_hover_color: "var(--brand-grey-900, #f9f9fb)"
+            {% endcapture %}
+            {% assign social_icons_style = social_icon_styles | ymlify %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
+        </div>
       {% endif %}
 
       {% if content.heading %}
