--- a/component-library/components/sections/contact-block/contact-block.scss
+++ b/component-library/components/sections/contact-block/contact-block.scss
@@ -21,6 +21,10 @@
       display:flex;
       flex-direction:column;
       gap:24px;
+
+      .c-social-icons{
+        justify-content:flex-start;
+      }
     }
 
     &__contact-details{
