--- a/component-library/components/sections/contact-block/contact-block.eleventy.liquid
+++ b/component-library/components/sections/contact-block/contact-block.eleventy.liquid
@@ -4,7 +4,7 @@
     {% if styles.orientation == "Right" %}
         {{ c }}--right
     {% endif %} 
-    {% if styles.background_variant == "Dark" %} 
+    {% if styles.background_variant == "dark" %} 
         component--dark
     {% endif %}">
   <div class="{{ c }}__content">
