--- a/component-library/components/sections/hero/hero.eleventy.liquid
+++ b/component-library/components/sections/hero/hero.eleventy.liquid
@@ -1,6 +1,9 @@
 {% assign_local c = "c-hero" %}
-<section class="{{ c }} {% if variant=="left-right-feature" %}{{ c }}--left-right-variant{% endif %}">
-    {% bookshop "generic/image" bind:background.image %}
+<section class="{{ c }} {% if styles.image_alignment =='left' %}{{ c }}--left-right-variant {{ c }}--image-left{% elsif styles.image_alignment =='right' %}{{ c }}--left-right-variant {{ c }}--image-right{% endif %} component component--full-height
+            {% if styles.background_variant == 'dark' %} 
+                component--dark
+            {% endif %}">
+    {% bookshop "generic/image" bind:content.image %}
     <div class="{{ c }}__cover"></div>
     <div class="{{ c }}__content">
         {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
