--- a/component-library/components/sections/contact-block/contact-block.eleventy.liquid
+++ b/component-library/components/sections/contact-block/contact-block.eleventy.liquid
@@ -18,7 +18,7 @@
                 icon_hover_color: "var(--brand-grey-900, #f9f9fb)"
             {% endcapture %}
             {% assign social_icons_style = social_icon_styles | ymlify %}
-            {% bookshop "generic/social-icons" live_render:false social_media_links:site.social_media_links style:social_icons_style %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
           </div>
         {% endif %}
 
