Reactor: removing the max-width and trying to center all embeds
- changed the .c-custom-embed to display:flex and justify-content:center
- removed the explicit width calculation part
- the idea is that the content will default to 100% width and if the user explicitly sets a different width in their embed code, that's on them

--- a/component-library/components/generic/custom-embed/custom-embed.scss
+++ b/component-library/components/generic/custom-embed/custom-embed.scss
@@ -1,13 +1,12 @@
 .c-custom-embed {
     aspect-ratio: var(--c-custom-embed-ratio);
     width: 100%;
+    display:flex;
+    justify-content: center;
 
     iframe {
+        border:none;
         aspect-ratio: var(--c-custom-embed-ratio);
         width: 100%;
-    }
-
-    &--custom-max-width {
-        max-width: var(--c-custom-embed-custom-max-width, 100%);
     }
 }
