--- a/component-library/components/sections/contact-block/contact-block.eleventy.liquid
+++ b/component-library/components/sections/contact-block/contact-block.eleventy.liquid
@@ -8,8 +8,7 @@
         component--dark
     {% endif %}">
   <div class="{{ c }}__content">
-    <div class="{{ c }}__content-wrapper">      
-      <div class="{{ c }}__contact-details">
+    <div class="{{ c }}__content-wrapper">            
         {% if content.social_icons %}
           <div class="{{ c }}__social-icons">
             {% capture social_icon_styles %}
@@ -21,37 +20,36 @@
             {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
           </div>
         {% endif %}
-
-        <div class="{{ c }}__text-block">
+        <div class="{{ c }}__contact-details">          
           {% if content.heading %}
             {% bookshop "generic/component-heading" bind:content.heading %}
           {% endif %}
         
-          {% if content.description %}
-            {% bookshop "generic/text-block" text:content.description %}
+          <div class="{{ c }}__content">
+            {% if content.description %}
+              {% bookshop "generic/text-block" text:content.description %}
+            {% endif %}          
+
+            {% for detail in content.contact_details %}
+              {% capture icon_styles %}
+                icon_size: "small"
+                icon_type: "outline"
+                hero_icon_name: {{ detail.hero_icon_name }}
+                rounded_border: true        
+                color: "#f9f9fb"
+              {% endcapture %}
+              {% assign icon_styles = icon_styles | ymlify %}
+              {% bookshop "generic/labelled-icon"
+                text:detail.text 
+                arrangement:'inline' 
+                icon:icon_styles              
+              %}
+            {% endfor %}  
+          </div>
+          {% if content.button %}
+            <div class="{{ c }}__button">{% bookshop "generic/button" bind:content.button %}</div>
           {% endif %}
-        </div>
-
-        {% for detail in content.contact_details %}
-          {% capture icon_styles %}
-            icon_size: "small"
-            icon_type: "outline"
-            hero_icon_name: {{ detail.hero_icon_name }}
-            rounded_border: true        
-            color: "#f9f9fb"
-          {% endcapture %}
-          {% assign icon_styles = icon_styles | ymlify %}
-          {% bookshop "generic/labelled-icon"
-             text:detail.text 
-             arrangement:'inline' 
-             icon:icon_styles              
-          %}
-        {% endfor %}  
-      </div>          
-
-      {% if content.button %}
-        <div class="{{ c }}__button">{% bookshop "generic/button" bind:content.button %}</div>
-      {% endif %}
+      </div>                
     </div>
   </div>
   <div class="{{ c }}__map-wrapper">
