--- a/component-library/components/simple/image-card/image-card.scss
+++ b/component-library/components/simple/image-card/image-card.scss
@@ -10,4 +10,8 @@
         font-weight: var(--font-weight-body);
         line-height: var(--line-height);
     }
+
+    .c-component-heading {
+        gap: 0.5rem;
+    }
 }
