--- a/component-library/components/simple/gallery/gallery.eleventy.liquid
+++ b/component-library/components/simple/gallery/gallery.eleventy.liquid
@@ -1,9 +1,18 @@
 <div class="c-gallery">
-    <div class="c-gallery__tiles" total-tiles="{{ images.length }}">
-        {% for image in images %}
-            <div tile="{{ forloop.index }}" class="c-gallery__tiles__tile {% if forloop.index > 3 %}c-gallery__tiles__tile--hidden{% endif %}">{% bookshop "generic/image" bind:image %}</div>
-        {% endfor %}
-    </div>
+    {% if env_bookshop_live %}
+        {% comment %} TODO: add notification for live editing to explain all tiles will show but on the live site it will display 3-6 initially with a load more button {% endcomment %}
+        <div class="c-gallery__tiles" total-tiles="{{ images.length }}">
+            {% for image in images %}
+                <div class="c-gallery__tiles__tile">{% bookshop "generic/image" bind:image %}</div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <div class="c-gallery__tiles" total-tiles="{{ images.length }}">
+            {% for image in images %}
+                <div class="c-gallery__tiles__tile {% if forloop.index > 3 %}c-gallery__tiles__tile--hidden{% endif %}">{% bookshop "generic/image" bind:image %}</div>
+            {% endfor %}
+        </div>
 
-    <div class="c-gallery__button">{% bookshop "generic/button" text:"Load More" variant:"primary" disabled:false arrow:"down" %}</div>
+        <div class="c-gallery__button">{% bookshop "generic/button" text:"Load More" variant:"primary" disabled:false arrow:"down" %}</div>
+    {% endif %}
 </div>
