Feat: Adding structures to config to allow users to add pre-defined contact details

--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -1,9 +1,8 @@
 {% assign_local c = "c-icon" %}
 
-{% assign icon_style = icon_type %}
 {% assign icon_path = "/assets/images/icons/" | append: icon_type | append: "/" | append: hero_icon_name  | append: '.svg' %}
 
-<span class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
+<span class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_type }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
     {% if env_bookshop_live %}
         <span class="{{ c }}__image" style="--url: url('{{ icon_path }}')"></span>
     {% else %}
