--- a/component-library/components/simple/image-card/image-card.scss
+++ b/component-library/components/simple/image-card/image-card.scss
@@ -4,7 +4,7 @@
     gap: 1rem;
     padding: 1.5rem;
 
-    &--content {
+    &__content {
         font-family: var(--font-family);
         font-size: var(--paragraph);
         font-weight: var(--font-weight-body);
