--- a/component-library/components/simple/image-card/image-card.eleventy.liquid
+++ b/component-library/components/simple/image-card/image-card.eleventy.liquid
@@ -8,7 +8,7 @@
 
     {% if heading %}{% bookshop "generic/component-heading" bind:heading %}{% endif %}
 
-    <div class="{{c}}--content">{% bookshop "generic/text-block" bind:content %}</div>
+    <div class="{{c}}__content">{% bookshop "generic/text-block" bind:content %}</div>
     <div>
         {% comment %} TODO: waiting on Generic Button component {% endcomment %}
         <a href="{{ link_url }}">
