--- a/component-library/components/simple/simple-text-block/simple-text-block.eleventy.liquid
+++ b/component-library/components/simple/simple-text-block/simple-text-block.eleventy.liquid
@@ -1,4 +1,4 @@
-{%  assign c = 'c-content-block' %}
+{%  assign c = 'c-simple-text-block' %}
 
 <div class='{{c}}--container'>
     <div class={{c}}>
