--- a/component-library/components/simple/simple-text-block/simple-text-block.scss
+++ b/component-library/components/simple/simple-text-block/simple-text-block.scss
@@ -1,26 +1,23 @@
 .c-simple-text-block {
-    grid-column: 1 / -1;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: var(--twelve-column-grid);
     justify-content: center;
-    align-items: flex-start;
-    gap: 3rem;
-    align-self: stretch;
+    align-items: center;
 
-    &--container {
-        display: grid;
-        grid-template-columns: var(--twelve-column-grid);
-        padding: 6rem 1rem;
+    &__content {
+        grid-column: 2 / -2;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+        gap: 3rem;
+        align-self: stretch;
     }
 
     // Desktop styles
-    @media screen and (min-width: 768px ) {
-        grid-column: 3 / -3;
-
-        &--container {
-            padding: 6rem 7.6875rem;
+    @media screen and (min-width: 1025px ) {
+        &__content {
+            grid-column: 4 / -4;
         }
     }
 }
