--- a/component-library/components/simple/simple-text-block/simple-text-block.eleventy.liquid
+++ b/component-library/components/simple/simple-text-block/simple-text-block.eleventy.liquid
@@ -1,12 +1,12 @@
 {%  assign c = 'c-simple-text-block' %}
 
 
-<section class='{{c}} {{ c }}--content-align-{{ styles.content_alignment }} component 
+<section class='{{c}} component 
 {% if styles.background_variant == 'dark' %} 
     component--dark
 {% endif %} '>
     <div class='{{c}}__content'>
-        {% bookshop "generic/component-heading" bind:heading %}
-        {% bookshop "generic/text-block" bind:content %}
+        {% bookshop "generic/component-heading" bind:content.heading %}
+        {% bookshop "generic/text-block" bind:content.description %}
     </div>
 </section>
