--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -1,4 +1,4 @@
-{%  assign c = 'c-image-card' %}
+{%  assign c = 'c-card' %}
 <div class={{c}}>
     {% if is_image %}
         {% bookshop "generic/image" bind:image %}
