Feat: move ratio out of styles object

--- a/component-library/components/generic/custom-embed/custom-embed.eleventy.liquid
+++ b/component-library/components/generic/custom-embed/custom-embed.eleventy.liquid
@@ -1,4 +1,4 @@
 {% assign_local c = "c-custom-embed" %}
-<div class="{{ c }}" style="--{{ c }}-ratio: {{ styles.ratio }};">
+<div class="{{ c }}" style="--{{ c }}-ratio: {{ ratio }};">
     {{ embed }}
 </div>
