--- a/component-library/components/sections/embed/embed.eleventy.liquid
+++ b/component-library/components/sections/embed/embed.eleventy.liquid
@@ -4,10 +4,12 @@
                 component--dark
             {% endif %}" >
 
-    <div class="{{ c }}__heading">
-        {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
-        {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
-    </div>
+    {% if content.heading or content.description %}
+        <div class="{{ c }}__heading">
+            {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
+            {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
+        </div>
+    {% endif %}
 
     {% if env_bookshop_live and content.show_note %}
         <div class="{{ c }}__note">
