--- a/component-library/components/simple/gallery/gallery.eleventy.liquid
+++ b/component-library/components/simple/gallery/gallery.eleventy.liquid
@@ -9,7 +9,7 @@
     {% else %}
         <div class="c-gallery__tiles" total-tiles="{{ images.length }}">
             {% for image in images %}
-                <div class="c-gallery__tiles__tile {% if forloop.index > 3 %}c-gallery__tiles__tile--hidden{% endif %}">{% bookshop "generic/image" bind:image %}</div>
+                <div class="c-gallery__tiles__tile c-gallery__tiles__tile--hidden">{% bookshop "generic/image" bind:image %}</div>
             {% endfor %}
         </div>
 
