Fix: remove image tile when no image specified + get total cards from js not bookshop

--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -6,7 +6,7 @@
 
     <img class="c-image" src="{{ image_path }}" alt="{{ image_alt }}">
 
-{% else %}
+{% elsif image_path %}
 
     {% image image_path, image_alt, 'c-image', true %}
 
