Refactor: added the theme.json file and replaced CSS variables with new versions

--- a/component-library/components/generic/form/radio-button-group/radio-button-group.scss
+++ b/component-library/components/generic/form/radio-button-group/radio-button-group.scss
@@ -1,5 +1,5 @@
 .c-radio-button-group {
-    color: var(--brand-grey-000, #F9F9FB);
+    color: var(--primary-foreground, #F9F9FB);
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -29,7 +29,7 @@
         gap: 8px;
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
-        color: var(--brand-grey-000, #F9F9FB);
+        color: var(--primary-foreground, #F9F9FB);
     }
         
     &__error {
