--- a/src/_includes/partials/head/stylesheets.html
+++ b/src/_includes/partials/head/stylesheets.html
@@ -1,8 +1,8 @@
 <!-- User Defined Styles -->
 <style>
   :root {
-    --light-background-variant: {{ site.styles.light_background_variant | default: "#3B3B3D" }};
-    --dark-background-variant: {{ site.styles.dark_background_variant | default: "#1B1B1D" }};
+    --primary-background: {{ site.styles.light_background_variant | default: "#3B3B3D" }};
+    --secondary-background: {{ site.styles.dark_background_variant | default: "#1B1B1D" }};
     --heading-font: {{ site.styles.heading_font | default: "Lato" }};
     --content-font: {{ site.styles.content_font | default: "Lato" }};
     --logo-font: {{ nav.logo_text.font | default: "Lato" }};
