--- a/component-library/components/generic/social-icons/social-icons.scss
+++ b/component-library/components/generic/social-icons/social-icons.scss
@@ -5,9 +5,9 @@
   align-items: center;
   gap: 1rem;
 
-  --dynamic-fill-color: var(--fill-color, var(--brand-grey-000));
-  --dynamic-hover-color: var(--hover-color, var(--brand-grey-000));
-  --dynamic-fill-color-hover: var(--fill-color-hover, var(--brand-grey-900));
+  --dynamic-fill-color: var(--fill-color, var(--primary-foreground));
+  --dynamic-hover-color: var(--hover-color, var(--primary-foreground));
+  --dynamic-fill-color-hover: var(--fill-color-hover, var(--secondary-background));
 
   &__icon {
     transition: background-color 300ms ease-out, fill 300ms ease-out;
