--- a/component-library/components/sections/price-list/price-list.scss
+++ b/component-library/components/sections/price-list/price-list.scss
@@ -1,5 +1,5 @@
 .c-price-list {
-    color: var(--brand-grey-000, #F9F9FB);
+    color: var(--primary-foreground, #F9F9FB);
     display: grid;
     grid-template-columns: var(--twelve-column-grid);
     row-gap: 48px;
@@ -58,7 +58,7 @@
                 }
 
                 &__seperator {
-                    border-bottom: 1px var(--brand-grey-000, #F9F9FB) dotted
+                    border-bottom: 1px var(--primary-foreground, #F9F9FB) dotted
                 }
             }
         }
