Refactor: added the theme.json file and replaced CSS variables with new versions

--- a/component-library/components/generic/button/button.scss
+++ b/component-library/components/generic/button/button.scss
@@ -12,7 +12,7 @@
   align-items: center;
 
   &:focus {
-    outline: 2px solid var(--interaction-blue-300, #2566f2);
+    outline: 2px solid var(--interaction-color, #2566f2);
     outline-offset: -2px;
   }
 
