--- a/component-library/components/generic/form/checkbox-group/checkbox-group.scss
+++ b/component-library/components/generic/form/checkbox-group/checkbox-group.scss
@@ -34,7 +34,7 @@
         
     &__error {
         display: none;
-        color: var(--error-red-300, #BF2323);
+        color: var(--error-color, #BF2323);
         gap: 8px;
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
