--- a/component-library/components/generic/form/select-input/select-input.scss
+++ b/component-library/components/generic/form/select-input/select-input.scss
@@ -23,7 +23,7 @@
         color: var(--primary-foreground, #F9F9FB);
 
         &:focus {
-            border: 2px solid var(--interaction-blue-300, #2566F2);
+            border: 2px solid var(--interaction-color, #2566F2);
             outline: none;
         }
     }
