--- a/component-library/components/generic/form/checkbox-input/checkbox-input.scss
+++ b/component-library/components/generic/form/checkbox-input/checkbox-input.scss
@@ -17,7 +17,7 @@
     flex-shrink: 0;
 
     &:focus {
-        border: 2px solid var(--interaction-blue-300, #2566F2);
+        border: 2px solid var(--interaction-color, #2566F2);
         outline: none;
     }
 
@@ -26,7 +26,7 @@
     }
 
     &:focus:checked:after {
-      color: var(--interaction-blue-300, #2566F2);
+      color: var(--interaction-color, #2566F2);
     }
 
     &:checked:after {
