--- a/component-library/components/generic/form/text-input/text-input.eleventy.liquid
+++ b/component-library/components/generic/form/text-input/text-input.eleventy.liquid
@@ -18,7 +18,7 @@
     {% endif %}
 
     <div class="{{ c }}__error error">
-        {% bookshop "generic/icon" hero_icon_name:"x-circle" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
+        {% bookshop "generic/icon" hero_icon_name:"x-circle" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'var(--error-color, #BF2323)' %}
         <p class="{{ c }}__error__text error__text" id="{{ id }}--error">Error Message<p>
     </div>
 </div>
