--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -1,4 +1,4 @@
-{% assign c = "c-contact-block" %}
+{% assign_local c = "c-contact-block" %}
 
 <section class="{{ c }} component 
     {% if styles.orientation == "Right" %}
