--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -2,7 +2,7 @@
 
 <section class="{{ c }} component 
     {% if styles.orientation == "Right" %}
-        {{ c }}--right
+        {{ c }}--map-right
     {% endif %} 
     {% if styles.background_variant == "dark" %} 
         component--dark
