--- a/component-library/components/simple/card/card.scss
+++ b/component-library/components/simple/card/card.scss
@@ -2,7 +2,16 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1.5rem;
+
+    &__content, &__header, &__button, &--icon &__imagery {
+        padding: 0 1.5rem;
+    }
+    &--icon {
+        padding: 1.5rem 0;
+    }
+    &--image {
+        padding: 0 0 1.5rem 0;
+    }
 
     &__content {
         font-size: var(--paragraph);
@@ -10,7 +19,31 @@
         line-height: var(--line-height);
     }
 
-    .c-component-heading {
+    &__header {
+        display: grid;
         gap: 0.25rem;
+        font-weight: var(--font-weight-headings);
+        line-height: var(--line-height);
+        width: 100%;
+        @supports (text-wrap: balance) {
+          text-wrap: balance;
+        }
+      
+        &__eyebrow_heading {
+          grid-row: 1;
+          font-size: var(--eyebrow-heading);
+          letter-spacing: var(--letter-spacing-wide);
+          text-transform: uppercase;
+        }
+      
+        &__primary_heading {
+          word-break: break-word;
+          font-size: var(--small-heading);
+          letter-spacing: var(--letter-spacing);
+        }
+      
+        &__eyebrow_heading + &__primary_heading {
+          grid-row: 2;
+        }
     }
 }
