Refactor: changed --dark to --secondary throughout components

--- a/component-library/components/generic/sample/sample.eleventy.liquid
+++ b/component-library/components/generic/sample/sample.eleventy.liquid
@@ -2,6 +2,6 @@
 <div class="{{c}} 
             component 
             {% if styles.background_variant == "Dark" %} 
-                component--dark
+                component--secondary
             {% endif %}"><p>{{ text }}</p>
 </div>
