Feat: change icon/image to a structure

--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -3,14 +3,10 @@
             {% if styles.background_variant == 'dark' %} 
                 component--dark
             {% endif %}
-            {% if is_image %} {{ c }}--image {% else %} {{ c }}--icon {% endif %}">
+            {% if imagery._bookshop_name == 'generic/image' %} {{ c }}--image {% else %} {{ c }}--icon {% endif %}">
 
     <div class="{{ c }}__imagery">
-        {% if is_image %}
-            {% bookshop "generic/image" bind:image %}
-        {% elsif icon %}
-            {% bookshop "generic/icon" bind:icon %}
-        {% endif %}
+        {% bookshop "{{imagery._bookshop_name}}" bind:imagery %}
     </div>
 
     <header class="{{ c }}__header">
