Fix: updated component if statements for primary/secondary

--- a/component-library/components/sections/price-list/price-list.eleventy.liquid
+++ b/component-library/components/sections/price-list/price-list.eleventy.liquid
@@ -1,6 +1,6 @@
 {% assign pl = "c-price-list" %}
 <section class="{{ pl }} {{ pl }}--content-align-{{ styles.content_alignment }} component 
-            {% if styles.background_variant == 'dark' %} 
+            {% if styles.background_variant == 'secondary' %} 
                 component--secondary
             {% endif %}">
     
