--- a/component-library/components/sections/centered-large-asset/centered-large-asset.eleventy.liquid
+++ b/component-library/components/sections/centered-large-asset/centered-large-asset.eleventy.liquid
@@ -1,6 +1,6 @@
 {% assign_local c = "c-centered-large-asset" %}
 <section class="{{ c }} component 
-            {% if styles.background_variant == 'dark' %} 
+            {% if styles.background_variant == 'secondary' %} 
                 component--secondary
             {% endif %}">
     
