--- a/component-library/components/sections/form/form.eleventy.liquid
+++ b/component-library/components/sections/form/form.eleventy.liquid
@@ -1,6 +1,6 @@
 {% assign_local c = "c-form" %}
 <section class="{{ c }} {{ c }}--content-align-{{ styles.content_alignment }} component 
-            {% if styles.background_variant == 'dark' %} 
+            {% if styles.background_variant == 'secondary' %} 
                 component--secondary
             {% endif %}" >
 
