--- a/component-library/components/generic/sample/sample.eleventy.liquid
+++ b/component-library/components/generic/sample/sample.eleventy.liquid
@@ -1,7 +1,7 @@
 {% assign c = "c-COMPONENTNAME" %}
 <div class="{{c}} 
             component 
-            {% if styles.background_variant == "Dark" %} 
+            {% if styles.background_variant == "secondary" %} 
                 component--secondary
             {% endif %}"><p>{{ text }}</p>
 </div>
