Fix: changed heading to flat structure

--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -22,7 +22,7 @@
         {% endif %}
         <div class="{{ c }}__contact-details">          
           {% if content.heading %}
-            {% bookshop "generic/component-heading" bind:content.heading %}
+            {% bookshop "generic/component-heading" primary_heading:content.heading %}
           {% endif %}
         
           <div class="{{ c }}__content">
