Fix: fixed padding issue, and also changed --map-right to --map-left (as it was already defaulted to the right)

--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -1,8 +1,8 @@
 {% assign_local c = "c-contact-block" %}
 
-<section class="{{ c }} component 
-    {% if styles.orientation == "Right" %}
-        {{ c }}--map-right
+<section class="{{ c }} component {{ c }}
+    {% if styles.orientation == "Left" %}
+        {{ c }}--map-left
     {% endif %} 
     {% if styles.background_variant == "dark" %} 
         component--dark
