Fix: added missing CSS styles to text block; fixed some CC config

--- a/component-library/components/sections/simple-text-block/simple-text-block.eleventy.liquid
+++ b/component-library/components/sections/simple-text-block/simple-text-block.eleventy.liquid
@@ -7,6 +7,6 @@
 {% endif %} '>
     <div class='{{c}}__content'>
         {% bookshop "generic/component-heading" bind:content.heading %}
-        {% bookshop "generic/text-block" text:content.text %}
+        {% bookshop "generic/text-block" bind:content.text %}
     </div>
 </section>
